<resources>
    <string name="app_name">MemoryLossGuardian</string>
    <string name="login_to_get_started">Get Started</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="register_now">Register Now</string>
    <string name="new_user">New User</string>
    <string name="register_to_get_started">Register to get started</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_a_user">Already a user</string>
    <string name="view_primary_contact">View Primary Contact</string>
    <string name="change_primary_contact">Change Primary Contact</string>
    <string name="user_details">User Details</string>
    <string name="address">Address</string>
    <string name="next">next</string>
    <string name="finish">finish</string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unique_id">Unique Id</string>
</resources>